Add hook URL in the webhook instruction when creating course instance

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-18 13:37+0300\n"
+"POT-Creation-Date: 2022-08-19 08:42+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -2859,9 +2859,9 @@ msgstr ""
 #: edit_course/views.py
 msgid "COURSE_INSTANCE_WEBHOOK_INFO"
 msgstr ""
-"Remember to copy the Webhook secret to the webhook settings of the course "
-"project in GitLab. You can find the Webhook secret in the section <b>Edit "
-"course &#8594; Git manager</b>."
+"Remember to copy the Webhook secret and hook URL to the webhook settings of "
+"the course project in GitLab. You can find the Webhook secret and hook URL "
+"in the section <b>Edit course &#8594; Git manager</b>."
 
 #: edit_course/views.py
 msgid "GITMANAGER_UPDATED"
