--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-18 13:37+0300\n"
+"POT-Creation-Date: 2022-08-19 08:42+0300\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -2873,9 +2873,9 @@ msgstr ""
 #: edit_course/views.py
 msgid "COURSE_INSTANCE_WEBHOOK_INFO"
 msgstr ""
-"Muista kopioida Webhook secret kurssiprojektin webhook-asetuksiin "
-"GitLabissa. Löydät Webhook secretin osiosta <b>Muokkaa kurssia &#8594; Git "
-"manager</b>."
+"Muista kopioida Webhook secret ja hook URL kurssiprojektin webhook-"
+"asetuksiin GitLabissa. Löydät Webhook secretin ja hook URL:n osiosta "
+"<b>Muokkaa kurssia &#8594; Git manager</b>."
 
 #: edit_course/views.py
 msgid "GITMANAGER_UPDATED"
