Clarify the message about receiving a new submission successfully
Avoid the phrase "accepted for grading" so that it is not
misunderstood as "this has been graded and it got accepted
with a passed grade".

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -4128,7 +4128,7 @@ msgstr "Show exercise template"
 #: exercise/templates/exercise/submission.html
 #: exercise/templates/exercise/submission_plain.html
 msgid "SUBMISSION_ACCEPTED_FOR_GRADING"
-msgstr "Your submission has been accepted for grading."
+msgstr "Your submission has been received."
 
 #: exercise/templates/exercise/results.html
 msgid "RESULTS"
