Use the word "assignment" in the exercise template button
The user interface has been using "assignment" instead of "exercise"
elsewhere for a long time.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -4122,7 +4122,7 @@ msgstr "Show model answer"
 
 #: exercise/templates/exercise/exercise_plain.html
 msgid "SHOW_EXERCISE_TEMPLATE"
-msgstr "Show exercise template"
+msgstr "Show assignment template"
 
 #: exercise/templates/exercise/exercise_plain.html
 #: exercise/templates/exercise/submission.html
