--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-13 12:10+0200\n"
+"POT-Creation-Date: 2023-02-03 14:48+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -862,10 +862,17 @@ msgstr "Failed to save changes."
 
 #: course/staff_views.py
 #, python-brace-format
-msgid "STUDENT_ENROLLED_FROM_SIS -- {count}"
-msgid_plural "STUDENTS_ENROLLED_FROM_SIS -- {count}"
-msgstr[0] "{count} student has been enrolled from SIS."
-msgstr[1] "{count} students have been enrolled from SIS."
+msgid "STUDENT_ENROLLED_FROM_SIS -- {addcount}"
+msgid_plural "STUDENTS_ENROLLED_FROM_SIS -- {addcount}"
+msgstr[0] "{addcount} student has been enrolled based on SIS."
+msgstr[1] "{addcount} students have been enrolled based on SIS."
+
+#: course/staff_views.py
+#, python-brace-format
+msgid "STUDENT_REMOVED_FROM_SIS -- {delcount}"
+msgid_plural "STUDENTS_REMOVED_FROM_SIS -- {delcount}"
+msgstr[0] "{delcount} student has been removed based on SIS."
+msgstr[1] "{delcount} students have been removed based on SIS."
 
 #: course/staff_views.py
 msgid "COULD_NOT_ACCESS_SIS"
