Make course module folding optional and implement automatic scrolling
The automatic folding and hiding of expired course modules on the user
results page was suboptimal and annoying for some students/teachers.

Old course modules are no longer hidden behind a button and folding
is made optional with the use of a new "Expand all modules" button.
Automatic scrolling takes the user to the first open module, unless the
page contains previously unseen course news. Automatic scrolling can be
enabled/disabled and the behavior can be selected using two new buttons.

Fixes #1125

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-14 14:12+0300\n"
+"POT-Creation-Date: 2023-07-19 08:06+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -4011,8 +4011,16 @@ msgid "FILTER_VIEW"
 msgstr "Show"
 
 #: exercise/templates/exercise/_user_results.html
-msgid "SHOW_OLDER_ASSIGNMENTS"
-msgstr "Show older assignments"
+msgid "EXPAND_ALL_MODULES"
+msgstr "Expand all modules"
+
+#: exercise/templates/exercise/_user_results.html
+msgid "AUTO_SCROLL"
+msgstr "Automatic scrolling"
+
+#: exercise/templates/exercise/_user_results.html
+msgid "AUTO_SCROLL_BEHAVIOR_INSTANT"
+msgstr "Instant scrolling"
 
 #: exercise/templates/exercise/_user_results.html
 msgid "OPENS ON"
