Add assessed submitters ratio to submissions table
Add counter of manually assessed submitters, showing the number of
submitters that have been assessed, remaining, and the percentage.

Fixes #1109

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -5905,3 +5905,7 @@ msgstr "No system-wide accessibility statement found."
 #: userprofile/views.py
 msgid "NO_SUPPORT_PAGE"
 msgstr "No support page. Please notify administration!"
+
+#: exercise/templates/exercise/staff/_submissions_table.html
+msgid "GRADED"
+msgstr "graded"
