--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-25 12:04+0300\n"
+"POT-Creation-Date: 2023-08-28 12:16+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -3566,6 +3566,10 @@ msgid "TRIGGER_COMPLETION"
 msgstr "After completion (full points or all submissions used)"
 
 #: exercise/reveal_models.py
+msgid "TRIGGER_DEADLINE_OR_FULL_POINTS"
+msgstr "After deadline and personal extensions or full points"
+
+#: exercise/reveal_models.py
 msgid "LABEL_TRIGGER"
 msgstr "When revealed"
 
@@ -4688,7 +4692,7 @@ msgstr "No submissions for this course."
 #: exercise/templatetags/exercise.py exercise/viewbase.py
 #, python-brace-format
 msgid "RESULTS_WILL_BE_REVEALED -- {time}"
-msgstr "Results will be revealed {time}."
+msgstr "Results will be revealed at the latest on {time}."
 
 #: exercise/templatetags/exercise.py exercise/viewbase.py
 msgid "RESULTS_ARE_CURRENTLY_HIDDEN"
